# 18646-Project

./: .gitignore  CMakeLists.txt  Makefile  README.md  compare_raster_data.py  geometry.h  main.cpp  main.cu  main.x  model.h  our_gl.cpp  our_gl.h  plot_results.py  rasterization_kernel.cu  rdtsc.h  results.csv  results_16x16.csv  results_16x32.csv  results_16x8.csv  results_32x16.csv  results_32x32.csv  results_32x8.csv  results_8x16.csv  results_8x32.csv  results_8x8.csv  results_baseline.csv  scale_obj.py  tgaimage.h  verify_rasterization.py
